--- a/Hyperparameter_optimization/GCNN/Hyperparameter_optimization_GCNN.ipynb
+++ b/Hyperparameter_optimization/GCNN/Hyperparameter_optimization_GCNN.ipynb
@@ -62,10 +62,18 @@
     "        \n",
     "        db = connect('../Database.db')\n",
     "        \n",
-    "        images = np.array([r.toatoms() for r in db.select()])\n",
+    "        images = []\n",
+    "        d_cen = []\n",
+    "        full_width = []\n",
     "        \n",
-    "        self.d_cen = np.array([r['data']['d_cen'] for r in db.select()], dtype=np.float32)\n",
-    "        self.full_width = np.array([r['data']['full_width'] for r in db.select()], dtype=np.float32)\n",
+    "        for r in db.select():\n",
+    "            images += [r.toatoms()]\n",
+    "            d_cen += [r['data']['d_cen']]\n",
+    "            full_width += [r['data']['full_width']]\n",
+    "        \n",
+    "        images = np.array(images)\n",
+    "        self.d_cen = np.array(d_cen, dtype=np.float32)\n",
+    "        self.full_width = np.array(full_width, dtype=np.float32)\n",
     "        \n",
     "        self.features = multiprocessing.Pool().map(descriptor.feas, images)\n",
     "    \n",
@@ -139,10 +147,9 @@
     "                   + '.txt', [final_ans_test_mse])\n",
     "        \n",
     "        return {'mean_loss': final_ans_test_mse}\n",
-    "    \n",
+    "\n",
     "    def _save(self, checkpoint_dir):\n",
     "        checkpoint_path = os.path.join(checkpoint_dir, 'model.pth')\n",
-    "        torch.save(self.model.state_dict(), checkpoint_path)\n",
     "        return checkpoint_path\n",
     "\n",
     "    def _restore(self, checkpoint_path):\n",
