--- a/Hyperparameter_optimization/TinNet/Hyperparameter_optimization_TinNet.ipynb
+++ b/Hyperparameter_optimization/TinNet/Hyperparameter_optimization_TinNet.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "# Train the network\n",
     "\n",
-    "class TrainTINN(tune.Trainable):\n",
+    "class TrainTinNet(tune.Trainable):\n",
     "    def _setup(self, config):\n",
     "        \n",
     "        self.lr = config.get('lr', 0.01)\n",
@@ -54,20 +54,45 @@
     "        \n",
     "        db = connect('../Database.db')\n",
     "        \n",
-    "        self.d_cen = np.array([r['data']['d_cen'] for r in db.select()], dtype=np.float32)\n",
-    "        self.full_width = np.array([r['data']['full_width'] for r in db.select()], dtype=np.float32)\n",
+    "        d_cen = []\n",
+    "        full_width = []\n",
+    "        tabulated_d_cen_inf = []\n",
+    "        tabulated_full_width_inf = []\n",
+    "        tabulated_mulliken = []\n",
+    "        tabulated_site_index = []\n",
+    "        tabulated_v2dd = []\n",
+    "        tabulated_v2ds = []\n",
+    "        atom_fea = []\n",
+    "        nbr_fea = []\n",
+    "        nbr_fea_idx = []\n",
+    "        tabulated_padding_fillter = []\n",
     "        \n",
-    "        self.tabulated_d_cen_inf = np.array([r['data']['tabulated_d_cen_inf'] for r in db.select()], dtype=np.float32)\n",
-    "        self.tabulated_full_width_inf = np.array([r['data']['tabulated_full_width_inf'] for r in db.select()], dtype=np.float32)\n",
-    "        self.tabulated_mulliken = np.array([r['data']['tabulated_mulliken'] for r in db.select()], dtype=np.float32)\n",
-    "        self.tabulated_site_index = np.array([r['data']['tabulated_mulliken'] for r in db.select()], dtype=np.float32)\n",
-    "        self.tabulated_v2dd = np.array([r['data']['tabulated_v2dd'] for r in db.select()], dtype=np.float32)\n",
-    "        self.tabulated_v2ds = np.array([r['data']['tabulated_v2ds'] for r in db.select()], dtype=np.float32)\n",
+    "        for r in db.select():\n",
+    "            d_cen += [r['data']['d_cen']]\n",
+    "            full_width += [r['data']['full_width']]\n",
+    "            tabulated_d_cen_inf += [r['data']['tabulated_d_cen_inf']]\n",
+    "            tabulated_full_width_inf += [r['data']['tabulated_full_width_inf']]\n",
+    "            tabulated_mulliken += [r['data']['tabulated_mulliken']]\n",
+    "            tabulated_site_index += [r['data']['tabulated_site_index']]\n",
+    "            tabulated_v2dd += [r['data']['tabulated_v2dd']]\n",
+    "            tabulated_v2ds += [r['data']['tabulated_v2ds']]\n",
+    "            atom_fea += [np.array(r['data']['atom_fea'], dtype=np.float32)]\n",
+    "            nbr_fea += [np.array(r['data']['nbr_fea'], dtype=np.float32)]\n",
+    "            nbr_fea_idx += [np.array(r['data']['nbr_fea_idx'], dtype=np.float32)]\n",
+    "            tabulated_padding_fillter += [np.array(r['data']['tabulated_padding_fillter'], dtype=np.int32)]\n",
     "        \n",
-    "        self.atom_fea = np.array([r['data']['atom_fea'] for r in db.select()])\n",
-    "        self.nbr_fea = np.array([r['data']['nbr_fea'] for r in db.select()])\n",
-    "        self.nbr_fea_idx = np.array([r['data']['nbr_fea_idx'] for r in db.select()])\n",
-    "        self.tabulated_padding_fillter = np.array([r['data']['tabulated_padding_fillter'] for r in db.select()])\n",
+    "        self.d_cen = np.array(d_cen, dtype=np.float32)\n",
+    "        self.full_width = np.array(full_width, dtype=np.float32)\n",
+    "        self.tabulated_d_cen_inf = np.array(tabulated_d_cen_inf, dtype=np.float32)\n",
+    "        self.tabulated_full_width_inf = np.array(tabulated_full_width_inf, dtype=np.float32)\n",
+    "        self.tabulated_mulliken = np.array(tabulated_mulliken, dtype=np.float32)\n",
+    "        self.tabulated_site_index = np.array(tabulated_site_index, dtype=np.int32)\n",
+    "        self.tabulated_v2dd = np.array(tabulated_v2dd, dtype=np.float32)\n",
+    "        self.tabulated_v2ds = np.array(tabulated_v2ds, dtype=np.float32)\n",
+    "        self.atom_fea = atom_fea\n",
+    "        self.nbr_fea = nbr_fea\n",
+    "        self.nbr_fea_idx = nbr_fea_idx\n",
+    "        self.tabulated_padding_fillter = tabulated_padding_fillter\n",
     "    \n",
     "    def _train(self):\n",
     "        \n",
@@ -150,10 +175,9 @@
     "                   + '.txt', [final_ans_test_mse])\n",
     "        \n",
     "        return {'mean_loss': final_ans_test_mse}\n",
-    "    \n",
+    "\n",
     "    def _save(self, checkpoint_dir):\n",
     "        checkpoint_path = os.path.join(checkpoint_dir, 'model.pth')\n",
-    "        torch.save(self.model.state_dict(), checkpoint_path)\n",
     "        return checkpoint_path\n",
     "\n",
     "    def _restore(self, checkpoint_path):\n",
@@ -178,8 +202,8 @@
     "    scheduler = AsyncHyperBandScheduler()\n",
     "    \n",
     "    analysis = tune.run(\n",
-    "        TrainTINN,\n",
-    "        name='TrainTINN',\n",
+    "        TrainTinNet,\n",
+    "        name='TrainTinNet',\n",
     "        metric='mean_loss',\n",
     "        mode='min',\n",
     "        search_alg=algo,\n",
