--- a/Preparing_data/Preparing_data.ipynb
+++ b/Preparing_data/Preparing_data.ipynb
@@ -310,55 +310,50 @@
    "source": [
     "# Converting calc.pdos_tot files to pickle files\n",
     "\n",
-    "def dos(file):\n",
-    "  try:\n",
-    "      home = os.getcwd()\n",
-    "      os.chdir(home)\n",
-    "      os.chdir(file)\n",
-    "      dos = np.loadtxt('calc.pdos_tot')   \n",
-    "      if len(dos[0])>3:\n",
-    "        nspin = 2\n",
-    "        dos_total = [dos[:,1],dos[:,2]]\n",
+    "def dos():\n",
+    "    dos = np.loadtxt('calc.pdos_tot')   \n",
+    "    if len(dos[0])>3:\n",
+    "      nspin = 2\n",
+    "      dos_total = [dos[:,1],dos[:,2]]\n",
+    "    else:\n",
+    "      nspin = 1\n",
+    "      dos_total = dos[:,1]\n",
+    "    efermi_tight = grab_fermi_tight('.')\n",
+    "    efermi = grab_fermi('.')\n",
+    "    dos_energies = dos[:,0] - efermi_tight\n",
+    "    npoints = len(dos_energies)\n",
+    "    \n",
+    "    atoms = io.read('espresso.pwo')\n",
+    "    channels = {'s':0, 'p':1, 'd':2, 'f':3}\n",
+    "    pdos = [{} for i in range(len(atoms))]\n",
+    "    p = os.popen('ls calc.pdos_atm*')\n",
+    "    proj = p.readlines()\n",
+    "    p.close()\n",
+    "    proj.sort()\n",
+    "    add_higher_channels = True\n",
+    "    for i,inp in enumerate(proj):\n",
+    "      inpfile = inp.strip()\n",
+    "      pdosinp = np.genfromtxt(inpfile)\n",
+    "      spl = inpfile.split('#')\n",
+    "      iatom = int(spl[1].split('(')[0]) - 1\n",
+    "      channel = spl[2].split('(')[1].rstrip(')').replace('_j',',j=')\n",
+    "      jpos = channel.find('j=')\n",
+    "      if jpos<0:\n",
+    "        ncomponents = (2*channels[channel[0]]+2) * nspin\n",
     "      else:\n",
-    "        nspin = 1\n",
-    "        dos_total = dos[:,1]\n",
-    "      efermi_tight = grab_fermi_tight('.')\n",
-    "      efermi = grab_fermi('.')\n",
-    "      dos_energies = dos[:,0] - efermi_tight\n",
-    "      npoints = len(dos_energies)\n",
-    "      \n",
-    "      atoms = io.read('espresso.pwo')\n",
-    "      channels = {'s':0, 'p':1, 'd':2, 'f':3}\n",
-    "      pdos = [{} for i in range(len(atoms))]\n",
-    "      p = os.popen('ls calc.pdos_atm*')\n",
-    "      proj = p.readlines()\n",
-    "      p.close()\n",
-    "      proj.sort()\n",
-    "      add_higher_channels = True\n",
-    "      for i,inp in enumerate(proj):\n",
-    "        inpfile = inp.strip()\n",
-    "        pdosinp = np.genfromtxt(inpfile)\n",
-    "        spl = inpfile.split('#')\n",
-    "        iatom = int(spl[1].split('(')[0]) - 1\n",
-    "        channel = spl[2].split('(')[1].rstrip(')').replace('_j',',j=')\n",
-    "        jpos = channel.find('j=')\n",
-    "        if jpos<0:\n",
-    "          ncomponents = (2*channels[channel[0]]+2) * nspin\n",
-    "        else:\n",
-    "          ncomponents = int(2.*float(channel[jpos+2:]))+2\n",
-    "        if not channel in pdos[iatom]:\n",
-    "          pdos[iatom][channel] = np.zeros((ncomponents, npoints), np.float)\n",
-    "          first = True\n",
-    "        else:\n",
-    "          first = False\n",
-    "        if add_higher_channels or first:\n",
-    "          for j in range(ncomponents):\n",
-    "            pdos[iatom][channel][j] += pdosinp[:, (j+1)]\n",
-    "      pickle.dump([dos_energies, dos_total, pdos], open('dos.pickle', 'wb'))\n",
-    "      os.chdir(home)\n",
-    "      return file, efermi_tight, efermi\n",
-    "  except:\n",
-    "      os.chdir(home)"
+    "        ncomponents = int(2.*float(channel[jpos+2:]))+2\n",
+    "      if not channel in pdos[iatom]:\n",
+    "        pdos[iatom][channel] = np.zeros((ncomponents, npoints), np.float)\n",
+    "        first = True\n",
+    "      else:\n",
+    "        first = False\n",
+    "      if add_higher_channels or first:\n",
+    "        for j in range(ncomponents):\n",
+    "          pdos[iatom][channel][j] += pdosinp[:, (j+1)]\n",
+    "    pickle.dump([dos_energies, dos_total, pdos], open('dos.pickle', 'wb'))\n",
+    "    print('efermi_tight =', efermi_tight, 'eV')\n",
+    "    print('efermi =', efermi, 'eV')\n",
+    "    return efermi_tight, efermi"
    ]
   },
   {
@@ -370,13 +365,7 @@
    "source": [
     "# Executing code\n",
     "\n",
-    "files = [file for file in os.listdir('.') if os.path.isdir(file)] # Read folder names\n",
-    "\n",
-    "ans = multiprocessing.Pool().map(dos, files) # Convert the calc.pdos_tot file in each folder\n",
-    "\n",
-    "for i in ans:\n",
-    "    if i != None:\n",
-    "        print(i[0], i[1], i[2]) # Print out the folder name and Fermi levels for each system"
+    "dos() # Convert the calc.pdos_tot file in each folder"
    ]
   },
   {
