--- a/Test/GCNN/Test_GCNN.ipynb
+++ b/Test/GCNN/Test_GCNN.ipynb
@@ -53,10 +53,18 @@
     "\n",
     "db = connect('../Database.db')\n",
     "\n",
-    "images = np.array([r.toatoms() for r in db.select()])\n",
+    "images = []\n",
+    "d_cen = []\n",
+    "full_width = []\n",
     "\n",
-    "d_cen = np.array([r['data']['d_cen'] for r in db.select()], dtype=np.float32)\n",
-    "full_width = np.array([r['data']['full_width'] for r in db.select()], dtype=np.float32)\n",
+    "for r in db.select():\n",
+    "    images += [r.toatoms()]\n",
+    "    d_cen += [r['data']['d_cen']]\n",
+    "    full_width += [r['data']['full_width']]\n",
+    "\n",
+    "images = np.array(images)\n",
+    "d_cen = np.array(d_cen, dtype=np.float32)\n",
+    "full_width = np.array(full_width, dtype=np.float32)\n",
     "\n",
     "idx = np.arange(len(images))\n",
     "\n",
@@ -97,8 +105,8 @@
    "source": [
     "# Test the performance of pre-trained GCNN models\n",
     "\n",
-    "for idx_validation in range(8,9):\n",
-    "    for idx_test in range(9,10):\n",
+    "for idx_validation in range(0,10):\n",
+    "    for idx_test in range(0,10):\n",
     "        try:\n",
     "            model = Regression(features,\n",
     "                               d_cen,\n",
