--- a/Data_pretreatment/Example/Data_pretreatment.ipynb
+++ b/Data_pretreatment/Example/Data_pretreatment.ipynb
@@ -409,12 +409,15 @@
     "        \n",
     "        image = images[image_idx]\n",
     "        \n",
-    "        n_atoms = len(image)\n",
-    "        n_start = n_atoms * 60\n",
-    "        n_end = n_atoms * 61\n",
-    "        site_idx = np.mod(tabulated_site_index[image_idx], n_atoms)\n",
+    "        site_idx = tabulated_site_index[image_idx]\n",
     "        \n",
-    "        image = image.repeat((33,33,1))\n",
+    "        n_atoms_small = len(image)\n",
+    "        \n",
+    "        image = image.repeat((11,11,1))\n",
+    "        \n",
+    "        n_atoms = len(image)\n",
+    "        \n",
+    "        image = image.repeat((3,3,1))\n",
     "        \n",
     "        atom_fea = []\n",
     "        nbr_fea = []\n",
@@ -422,9 +425,16 @@
     "        idx_syms = []\n",
     "        nbr_syms = []\n",
     "        \n",
+    "        shorten_nbr_fea = []\n",
+    "        shorten_atom_fea = []\n",
+    "        shorten_idx_syms = []\n",
     "        shorten_nbr_fea_idx = []\n",
+    "        shorten_nbr_syms = []\n",
     "        \n",
-    "        for idx in range(n_start, n_end):\n",
+    "        padding_fillter = []\n",
+    "        \n",
+    "        for i in range(0, n_atoms):\n",
+    "            idx = n_atoms*4 + i\n",
     "            nbr_lists = np.arange(len(image))\n",
     "            nbr_dis = image.get_distances(idx, nbr_lists)\n",
     "            nbr_lists = np.where((0.01 <= nbr_dis) * (nbr_dis <= 5.5))[0]\n",
@@ -487,19 +497,33 @@
     "        if len(tmp) != 86 and len(set(tmp)) != 86:\n",
     "            raise\n",
     "        \n",
-    "        nbr_fea_idx = np.array(nbr_fea_idx)\n",
-    "        shorten_nbr_fea_idx.append(np.mod(nbr_fea_idx, n_atoms))\n",
+    "        shorten_nbr_fea.append(nbr_fea[n_atoms_small*60:n_atoms_small*61])\n",
+    "        shorten_atom_fea.append(atom_fea[n_atoms_small*60:n_atoms_small*61])\n",
+    "        shorten_idx_syms.append(idx_syms[n_atoms_small*60:n_atoms_small*61])\n",
     "        \n",
-    "        return (idx_syms,\n",
-    "                nbr_syms,\n",
-    "                atom_fea,\n",
-    "                nbr_fea,\n",
-    "                np.array(shorten_nbr_fea_idx)[0],\n",
+    "        nbr_fea_idx = np.array(nbr_fea_idx[n_atoms_small*60:n_atoms_small*61])\n",
+    "        padding_fillter.append(nbr_fea_idx != 100000)\n",
+    "        shorten_nbr_fea_idx.append(np.mod(nbr_fea_idx, n_atoms_small))\n",
+    "        \n",
+    "        shorten_nbr_syms.append(nbr_syms[n_atoms_small*60:n_atoms_small*61])\n",
+    "        \n",
+    "        shorten_nbr_fea = np.array(shorten_nbr_fea)[0]\n",
+    "        shorten_atom_fea = np.array(shorten_atom_fea)[0]\n",
+    "        shorten_idx_syms = np.array(shorten_idx_syms)[0]\n",
+    "        shorten_nbr_fea_idx = np.array(shorten_nbr_fea_idx)[0]\n",
+    "        shorten_nbr_syms = np.array(shorten_nbr_syms)[0]\n",
+    "        padding_fillter = np.array(padding_fillter)[0]\n",
+    "        \n",
+    "        return (shorten_idx_syms,\n",
+    "                shorten_nbr_syms,\n",
+    "                shorten_atom_fea,\n",
+    "                shorten_nbr_fea,\n",
+    "                shorten_nbr_fea_idx,\n",
     "                tabulated_d_ij[image_idx][tmp],\n",
     "                tabulated_nbr_index[image_idx][tmp],\n",
     "                tabulated_v2dd[image_idx][tmp],\n",
     "                tabulated_v2ds[image_idx][tmp],\n",
-    "                np.array(nbr_fea_idx != 100000))\n",
+    "                padding_fillter)\n",
     "    \n",
     "    def dict_atom_fea_default(self):\n",
     "        \n",
