--- a/Hyperparameter_optimization/FCNN/Hyperparameter_optimization_FCNN.ipynb
+++ b/Hyperparameter_optimization/FCNN/Hyperparameter_optimization_FCNN.ipynb
@@ -179,16 +179,36 @@
     "        \n",
     "        db = connect('../Database.db')\n",
     "        \n",
-    "        d_cen = np.array([r['data']['d_cen'] for r in db.select()])\n",
-    "        full_width = np.array([r['data']['full_width'] for r in db.select()])\n",
-    "        target = np.stack((d_cen,full_width)).T\n",
-    "\n",
-    "        v2ds = np.array([r['data']['tabulated_v2ds'] for r in db.select()])\n",
-    "        v2dd = np.array([r['data']['tabulated_v2dd'] for r in db.select()])\n",
-    "        mulliken = np.array([r['data']['tabulated_mulliken'] for r in db.select()])\n",
-    "        d_cen_inf = np.array([r['data']['tabulated_d_cen_inf'] for r in db.select()])\n",
-    "        full_width_inf = np.array([r['data']['tabulated_full_width_inf'] for r in db.select()])\n",
-    "        fea = np.stack((np.sum((v2ds + v2dd), axis=1), mulliken, d_cen_inf, full_width_inf**2.0/12.0)).T\n",
+    "        d_cen = []\n",
+    "        full_width = []\n",
+    "        v2ds = []\n",
+    "        v2dd = []\n",
+    "        mulliken = []\n",
+    "        d_cen_inf = []\n",
+    "        full_width_inf = []\n",
+    "        \n",
+    "        for r in db.select():\n",
+    "            d_cen += [r['data']['d_cen']]\n",
+    "            full_width += [r['data']['full_width']]\n",
+    "            v2ds += [r['data']['tabulated_v2ds']]\n",
+    "            v2dd += [r['data']['tabulated_v2dd']]\n",
+    "            mulliken += [r['data']['tabulated_mulliken']]\n",
+    "            d_cen_inf += [r['data']['tabulated_d_cen_inf']]\n",
+    "            full_width_inf += [r['data']['tabulated_full_width_inf']]\n",
+    "        \n",
+    "        d_cen = np.array(d_cen)\n",
+    "        full_width = np.array(full_width)\n",
+    "        v2ds = np.array(v2ds)\n",
+    "        v2dd = np.array(v2dd)\n",
+    "        mulliken = np.array(mulliken)\n",
+    "        d_cen_inf = np.array(d_cen_inf)\n",
+    "        full_width_inf = np.array(full_width_inf)\n",
+    "        \n",
+    "        target = np.stack((d_cen, full_width)).T\n",
+    "        fea = np.stack((np.sum((v2ds + v2dd), axis=1),\n",
+    "                        mulliken,\n",
+    "                        d_cen_inf,\n",
+    "                        full_width_inf**2.0/12.0)).T\n",
     "        \n",
     "        target = Variable(torch.Tensor(target))\n",
     "        fea = Variable(torch.Tensor(fea))\n",
@@ -301,10 +321,9 @@
     "                   + '.txt', [final_ans_test_mse])\n",
     "        \n",
     "        return {'mean_loss': final_ans_test_mse}\n",
-    "    \n",
+    "\n",
     "    def _save(self, checkpoint_dir):\n",
     "        checkpoint_path = os.path.join(checkpoint_dir, 'model.pth')\n",
-    "        torch.save(self.net.state_dict(), checkpoint_path)\n",
     "        return checkpoint_path\n",
     "\n",
     "    def _restore(self, checkpoint_path):\n",
