--- a/Train/TinNet/Train_TinNet.ipynb
+++ b/Train/TinNet/Train_TinNet.ipynb
@@ -25,7 +25,6 @@
     "from ase import io\n",
     "from ase.db import connect\n",
     "\n",
-    "from tinnet.feature.voronoi import Voronoi\n",
     "from tinnet.regression.regression import Regression"
    ]
   },
@@ -47,20 +46,32 @@
     "\n",
     "db = connect('../Database.db')\n",
     "\n",
-    "d_cen = np.array([r['data']['d_cen'] for r in db.select()], dtype=np.float32)\n",
-    "full_width = np.array([r['data']['full_width'] for r in db.select()], dtype=np.float32)\n",
+    "d_cen = []\n",
+    "full_width = []\n",
+    "tabulated_d_cen_inf = []\n",
+    "tabulated_full_width_inf = []\n",
+    "tabulated_mulliken = []\n",
+    "tabulated_site_index = []\n",
+    "tabulated_v2dd = []\n",
+    "tabulated_v2ds = []\n",
+    "atom_fea = []\n",
+    "nbr_fea = []\n",
+    "nbr_fea_idx = []\n",
+    "tabulated_padding_fillter = []\n",
     "\n",
-    "tabulated_d_cen_inf = np.array([r['data']['tabulated_d_cen_inf'] for r in db.select()], dtype=np.float32)\n",
-    "tabulated_full_width_inf = np.array([r['data']['tabulated_full_width_inf'] for r in db.select()], dtype=np.float32)\n",
-    "tabulated_mulliken = np.array([r['data']['tabulated_mulliken'] for r in db.select()], dtype=np.float32)\n",
-    "tabulated_site_index = np.array([r['data']['tabulated_mulliken'] for r in db.select()], dtype=np.float32)\n",
-    "tabulated_v2dd = np.array([r['data']['tabulated_v2dd'] for r in db.select()], dtype=np.float32)\n",
-    "tabulated_v2ds = np.array([r['data']['tabulated_v2ds'] for r in db.select()], dtype=np.float32)\n",
-    "\n",
-    "atom_fea = np.array([r['data']['atom_fea'] for r in db.select()])\n",
-    "nbr_fea = np.array([r['data']['nbr_fea'] for r in db.select()])\n",
-    "nbr_fea_idx = np.array([r['data']['nbr_fea_idx'] for r in db.select()])\n",
-    "tabulated_padding_fillter = np.array([r['data']['tabulated_padding_fillter'] for r in db.select()])\n",
+    "for r in db.select():\n",
+    "    d_cen += [r['data']['d_cen']]\n",
+    "    full_width += [r['data']['full_width']]\n",
+    "    tabulated_d_cen_inf += [r['data']['tabulated_d_cen_inf']]\n",
+    "    tabulated_full_width_inf += [r['data']['tabulated_full_width_inf']]\n",
+    "    tabulated_mulliken += [r['data']['tabulated_mulliken']]\n",
+    "    tabulated_site_index += [r['data']['tabulated_site_index']]\n",
+    "    tabulated_v2dd += [r['data']['tabulated_v2dd']]\n",
+    "    tabulated_v2ds += [r['data']['tabulated_v2ds']]\n",
+    "    atom_fea += [r['data']['atom_fea']]\n",
+    "    nbr_fea += [r['data']['nbr_fea']]\n",
+    "    nbr_fea_idx += [r['data']['nbr_fea_idx']]\n",
+    "    tabulated_padding_fillter += [r['data']['tabulated_padding_fillter']]\n",
     "\n",
     "idx = np.arange(len(d_cen))\n",
     "\n",
@@ -75,20 +86,20 @@
     "\n",
     "idx = np.sort(np.concatenate((idx_1,idx_2)))\n",
     "\n",
-    "d_cen = np.array([d_cen[i] for i in idx])\n",
-    "full_width = np.array([full_width[i] for i in idx])\n",
+    "d_cen = np.array([d_cen[i] for i in idx], dtype=np.float32)\n",
+    "full_width = np.array([full_width[i] for i in idx], dtype=np.float32)\n",
     "\n",
-    "tabulated_d_cen_inf = np.array([tabulated_d_cen_inf[i] for i in idx])\n",
-    "tabulated_full_width_inf = np.array([tabulated_full_width_inf[i] for i in idx])\n",
-    "tabulated_mulliken = np.array([tabulated_mulliken[i] for i in idx])\n",
-    "tabulated_site_index = np.array([tabulated_site_index[i] for i in idx])\n",
-    "tabulated_v2dd = np.array([tabulated_v2dd[i] for i in idx])\n",
-    "tabulated_v2ds = np.array([tabulated_v2ds[i] for i in idx])\n",
+    "tabulated_d_cen_inf = np.array([tabulated_d_cen_inf[i] for i in idx], dtype=np.float32)\n",
+    "tabulated_full_width_inf = np.array([tabulated_full_width_inf[i] for i in idx], dtype=np.float32)\n",
+    "tabulated_mulliken = np.array([tabulated_mulliken[i] for i in idx], dtype=np.float32)\n",
+    "tabulated_site_index = np.array([tabulated_site_index[i] for i in idx], dtype=np.int32)\n",
+    "tabulated_v2dd = np.array([tabulated_v2dd[i] for i in idx], dtype=np.float32)\n",
+    "tabulated_v2ds = np.array([tabulated_v2ds[i] for i in idx], dtype=np.float32)\n",
     "\n",
-    "atom_fea = np.array([atom_fea[i] for i in idx], dtype=object)\n",
-    "nbr_fea = np.array([nbr_fea[i] for i in idx], dtype=object)\n",
-    "nbr_fea_idx = np.array([nbr_fea_idx[i] for i in idx], dtype=object)\n",
-    "tabulated_padding_fillter = np.array([tabulated_padding_fillter[i] for i in idx], dtype=object)\n",
+    "atom_fea = [np.array(atom_fea[i], dtype=np.float32) for i in idx]\n",
+    "nbr_fea = [np.array(nbr_fea[i], dtype=np.float32) for i in idx]\n",
+    "nbr_fea_idx = [np.array(nbr_fea_idx[i], dtype=np.float32) for i in idx]\n",
+    "tabulated_padding_fillter = [np.array(tabulated_padding_fillter[i], dtype=np.int32) for i in idx]\n",
     "\n",
     "final_ans_val_mae = np.zeros(10)\n",
     "final_ans_val_mse = np.zeros(10)\n",
